deploy/echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: echo-service
spec:
  ports:
  - port: 9080
    name: grpc
  selector:
    app: echo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - name: echo
        image: gcr.io/confab-cloud/echo-server:v1.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
