deploy/js.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-client
  labels:
    app: echo-client
spec:
  ports:
  - port: 4567
    name: http
    protocol: TCP
    targetPort: 4567
  selector:
    app: echo-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-client
        version: v1
    spec:
      containers:
      - name: echo-client
        image: gcr.io/confab-cloud/echojs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4567
  selector:
    matchLabels:
      app: echo-client
